src/objects/echosign_dev1__ParticipantSet__c.object
<CustomObject>
    <description>This object stores the participant set info returned from sign.</description>
    <fields>
        <fullName>echosign_dev1__ParticipantSetId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>ParticipantSetId</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>echosign_dev1__PrivateMessage__c</fullName>
        <label>PrivateMessage</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Roles__c</fullName>
        <label>Roles</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SENDER</fullName>
                </value>
                <value>
                    <fullName>SIGNER</fullName>
                </value>
                <value>
                    <fullName>APPROVER</fullName>
                </value>
                <value>
                    <fullName>ACCEPTOR</fullName>
                </value>
                <value>
                    <fullName>FORM_FILLER</fullName>
                </value>
                <value>
                    <fullName>CERTIFIED_RECIPIENT</fullName>
                </value>
                <value>
                    <fullName>DELEGATE_TO_SIGNER</fullName>
                </value>
                <value>
                    <fullName>DELEGATE_TO_APPROVER</fullName>
                </value>
                <value>
                    <fullName>DELEGATE_TO_ACCEPTOR</fullName>
                </value>
                <value>
                    <fullName>DELEGATE_TO_FORM_FILLER</fullName>
                </value>
                <value>
                    <fullName>DELEGATE_TO_CERTIFIED_RECIPIENT</fullName>
                </value>
                <value>
                    <fullName>CC</fullName>
                </value>
                <value>
                    <fullName>DELEGATE</fullName>
                </value>
                <value>
                    <fullName>SHARE</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>echosign_dev1__SecurityOptions__c</fullName>
        <label>SecurityOptions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PASSWORD</fullName>
                </value>
                <value>
                    <fullName>KBA</fullName>
                </value>
                <value>
                    <fullName>PHONE</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
                <value>
                    <fullName>SOCIAL</fullName>
                </value>
                <value>
                    <fullName>GOVERNMENT ID</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>echosign_dev1__SigningOrder__c</fullName>
        <label>SigningOrder</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>WAITING_FOR_MY_SIGNATURE</fullName>
                </value>
                <value>
                    <fullName>WAITING_FOR_MY_APPROVAL</fullName>
                </value>
                <value>
                    <fullName>WAITING_FOR_MY_ACCEPTANCE</fullName>
                </value>
                <value>
                    <fullName>WAITING_FOR_MY_ACKNOWLEDGEMENT</fullName>
                </value>
                <value>
                    <fullName>WAITING_FOR_MY_FORM_FILLING</fullName>
                </value>
                <value>
                    <fullName>WAITING_FOR_MY_DELEGATION</fullName>
                </value>
                <value>
                    <fullName>OUT_FOR_SIGNATURE</fullName>
                </value>
                <value>
                    <fullName>SIGNED</fullName>
                </value>
                <value>
                    <fullName>APPROVED</fullName>
                </value>
                <value>
                    <fullName>ACCEPTED</fullName>
                </value>
                <value>
                    <fullName>DELIVERED</fullName>
                </value>
                <value>
                    <fullName>FORM_FILLED</fullName>
                </value>
                <value>
                    <fullName>HIDDEN</fullName>
                </value>
                <value>
                    <fullName>NOT_YET_VISIBLE</fullName>
                </value>
                <value>
                    <fullName>WAITING_FOR_FAXIN</fullName>
                </value>
                <value>
                    <fullName>ARCHIVED</fullName>
                </value>
                <value>
                    <fullName>UNKNOWN</fullName>
                </value>
                <value>
                    <fullName>PARTIAL</fullName>
                </value>
                <value>
                    <fullName>FORM</fullName>
                </value>
                <value>
                    <fullName>WAITING_FOR_AUTHORING</fullName>
                </value>
                <value>
                    <fullName>OUT_FOR_APPROVAL</fullName>
                </value>
                <value>
                    <fullName>OUT_FOR_ACCEPTANCE</fullName>
                </value>
                <value>
                    <fullName>OUT_FOR_DELIVERY</fullName>
                </value>
                <value>
                    <fullName>OUT_FOR_FORM_FILLING</fullName>
                </value>
                <value>
                    <fullName>WIDGET</fullName>
                </value>
                <value>
                    <fullName>WAITING_FOR_MY_REVIEW</fullName>
                </value>
                <value>
                    <fullName>IN_REVIEW</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
                <value>
                    <fullName>EXPIRED</fullName>
                </value>
                <value>
                    <fullName>RECALLED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ParticipantSet</label>
    <nameField>
        <label>ParticipantSet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ParticipantSets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>